@@ -1623,54 +1623,19 @@ parameter_list|)
 block|{
 name|LOG
 operator|.
-name|error
+name|fatal
 argument_list|(
-literal|"Could not append to log. Opening new log. Exception: "
+literal|"Could not append. Requesting close of log"
 argument_list|,
 name|e
 argument_list|)
 expr_stmt|;
-name|rollWriter
+name|requestLogRoll
 argument_list|()
-expr_stmt|;
-try|try
-block|{
-name|this
-operator|.
-name|writer
-operator|.
-name|append
-argument_list|(
-name|logKey
-argument_list|,
-name|logEdit
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e2
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|fatal
-argument_list|(
-literal|"Could not append to log the second time because "
-operator|+
-name|e2
-operator|.
-name|toString
-argument_list|()
-operator|+
-literal|", aborting."
-argument_list|)
 expr_stmt|;
 throw|throw
-name|e2
+name|e
 throw|;
-block|}
 block|}
 name|this
 operator|.
@@ -1690,19 +1655,32 @@ operator|.
 name|maxlogentries
 condition|)
 block|{
+name|requestLogRoll
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+specifier|private
+name|void
+name|requestLogRoll
+parameter_list|()
+block|{
 if|if
 condition|(
+name|this
+operator|.
 name|listener
 operator|!=
 literal|null
 condition|)
 block|{
+name|this
+operator|.
 name|listener
 operator|.
 name|logRollRequested
 argument_list|()
 expr_stmt|;
-block|}
 block|}
 block|}
 comment|/** @return How many items have been added to the log */
